<?xml version="1.0"?>
<package format="2">
  <name>injector</name>
  <version>1.0.0</version>
  <description>The injector package</description>

  <author email="ricardo.caldas@chalmers.se">Ricardo Caldas</author>
  <maintainer email="ricardo.caldas@chalmers.se">Ricardo Caldas</maintainer>

  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>archlib</build_depend>
  <build_depend>libbsn</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>archlib</exec_depend>
  <exec_depend>libbsn</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
